@startuml
'https://plantuml.com/class-diagram

!include style.puml
skinparam arrowThickness 1
skinparam arrowColor Black
hide member

package command{
class Command <<interface>>
class CheckCommand <<abstract>>
class CheckCurrentCommand
class CheckExamCommand
class CheckLecturesCommand
class CheckTutorialsCommand
class CheckPriorityCommand
}

Command <|.. CheckCommand
Command <|.. CheckCurrentCommand
Command <|.. CheckPriorityCommand
CheckCommand <|-- CheckExamCommand
CheckCommand <|-- CheckLecturesCommand
CheckCommand <|-- CheckTutorialsCommand

@enduml